          scripting engine so we can have the best of both worlds. The script interface will be
          changing slightly for some of the indicators as I tweak each indicator. I will try to
          keep the docs current to reflect those changes as I make them. I am happy with the new
          changes and think we have (FINALLY!) a way to keep everyone (noobs and pros) satisfied.
          GUI and script versions YAY!!!!! I removed most the example scripts and kept the ones
          that provided good examples of how to do things.

          Added 4 new script commands. INDICATOR_GET_INDEX, CLEAR, GROUP_ADD, GROUP_DELETE.
          See docs. With these new commands, it is now possible to run scans. I am thinking
          of creating a seperate scan app so as not to bog down qtstalker with bloat and
          performance bottlenecks. Although an entire database scan did not use more than 25%
          CPU on my mid powered system while happily viewing charts. Could be possible to
          integrate scripting easily with adequate performance.

          Changed the GET_INDICATOR command to INDICATOR_GET and SET_INDICATOR to INDICATOR_SET. This
          is to better organize the commands into common groups. Docs and scripts are updated.

20100207: Added GROUP_GET, INDICATOR_GET_SIZE script commands. See docs.

          Fixed ExScript bug that caused a script to hang when parsing incorrect syntax.

20100208: Decoupled the config settings from main database. This allows the user to run multiple
          instances of qtstalker while allowing each instance to share all the common data such
          as indicators, groups etc. Changes made in one instance will be reflected in all other
          instances except for the preferences which are unique to each instance. Use the -session
          command line option to generate each instance.

          Added script side panel for script management. Works much the same as the other panels.










