@@ -217,6 +217,9 @@
 
           Added script side panel for script management. Works much the same as the other panels.
 
+20100213: Applied patch ID 2951227 - (fix ATR parameter checking. Add SYMBOL_GET for ExScript).
+          Thanks to John Anderson for the patch.
+
 
 
 
